added new section

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graftikle - Hair Solutions</title>
+    <!-- Favicons -->
+    <link rel="icon" href="assests/dhi.png" />
+    <link rel="apple-touch-icon" href="assests/dhi.png" />
+    <!-- SEO -->
+    <meta name="description" content="Graftikle offers advanced hair transplant solutions including DHI and Sapphire FUE with natural-looking results and expert care." />
+    <meta property="og:title" content="Graftikle - Hair Solutions" />
+    <meta property="og:description" content="Discover advanced hair restoration treatments and real patient results." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="assests/doc-img.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="treatment-styles.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="testimonials.css" />
     <link rel="stylesheet" href="faq-footer.css" />
+    <link rel="stylesheet" href="responsive.css" />
   <link rel="stylesheet" href="results.css" />
   <link rel="stylesheet" href="consultation.css" />
   <link rel="stylesheet" href="roadmap.css" />
@@ -161,7 +171,7 @@
             >Testimonials
           </a>
             <a
-              href="#faq "
+              href="#faq"
               class="nav-link text-gray-700 hover:text-primary transition-colors duration-300 font-medium"
               >FAQS</a
             >
@@ -773,6 +783,8 @@
                 <span class="dot" data-slide="1"></span>
                 <span class="dot" data-slide="2"></span>
                 <span class="dot" data-slide="3"></span>
+                <span class="dot" data-slide="4"></span>
+                <span class="dot" data-slide="5"></span>
               </div>
             </div>
           </div>
@@ -1166,6 +1178,81 @@
               </div>
             </div>
           </div>
+
+          <!-- Testimonial 4 -->
+          <div class="testimonial-card accent-primary">
+            <div class="testimonial-content">
+              <p class="testimonial-text">
+                "I was nervous at first, but the team made me comfortable throughout. The follow-ups were excellent and the results look completely natural. My friends can’t tell I had a transplant—just that I look younger."
+              </p>
+              <div class="testimonial-author">
+                <div class="w-12 h-12 bg-gradient-to-r from-primary to-secondary rounded-full flex items-center justify-center text-white font-bold">
+                  AK
+                </div>
+                <div class="testimonial-info">
+                  <h4 class="testimonial-name">Arjun Kapoor</h4>
+                  <p class="testimonial-role">FUE Patient</p>
+                  <div class="testimonial-rating">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Testimonial 5 -->
+          <div class="testimonial-card accent-secondary">
+            <div class="testimonial-content">
+              <p class="testimonial-text">
+                "Professional staff, clear guidance and a smooth recovery. The density I achieved is better than I expected, and the hairline design suits my face perfectly. Highly recommended!"
+              </p>
+              <div class="testimonial-author">
+                <div class="w-12 h-12 bg-gradient-to-r from-accent to-orange-500 rounded-full flex items-center justify-center text-white font-bold">
+                  RS
+                </div>
+                <div class="testimonial-info">
+                  <h4 class="testimonial-name">Rahul Singh</h4>
+                  <p class="testimonial-role">DHI Patient</p>
+                  <div class="testimonial-rating">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Testimonial 6 -->
+          <div class="testimonial-card accent-green">
+            <div class="testimonial-content">
+              <p class="testimonial-text">
+                "As someone with a sensitive scalp, I appreciated the careful approach. Minimal discomfort and clear aftercare instructions. My confidence is back—thank you, Graftikle!"
+              </p>
+              <div class="testimonial-author">
+                <div class="w-12 h-12 bg-gradient-to-r from-green-500 to-green-600 rounded-full flex items-center justify-center text-white font-bold">
+                  NP
+                </div>
+                <div class="testimonial-info">
+                  <h4 class="testimonial-name">Neha Patel</h4>
+                  <p class="testimonial-role">Women’s Hair Transplant Patient</p>
+                  <div class="testimonial-rating">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292z"/></svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Navigation Buttons and Indicators -->
@@ -1189,14 +1276,13 @@
             <span class="testimonial-indicator active" data-index="0"></span>
             <span class="testimonial-indicator" data-index="1"></span>
             <span class="testimonial-indicator" data-index="2"></span>
+            <span class="testimonial-indicator" data-index="3"></span>
+            <span class="testimonial-indicator" data-index="4"></span>
+            <span class="testimonial-indicator" data-index="5"></span>
           </div>
         </div>
     </section>
-
-    <!-- Results Section -->
-   
-
-   
+  
 
     <!-- FAQ Section -->
     <section id="faq" class="py-20 faq-section">
@@ -1455,7 +1541,7 @@
           <!-- Column 1: About & Logo -->
           <div class="footer-col fade-up-footer">
             <div class="footer-logo mb-6">
-              <span class="text-2xl font-bold text-white">Graftickle</span>
+              <span class="text-2xl font-bold text-white">Graftikle</span>
             </div>
             <p class="text-gray-300 mb-6">
               Providing advanced hair restoration solutions with cutting-edge technology and personalized care for natural, lasting results.
@@ -1488,11 +1574,11 @@
           <div class="footer-col fade-up-footer">
             <h3 class="footer-heading text-xl">Quick Links</h3>
             <nav class="mt-4">
-              <a href="#" class="footer-link">Home</a>
-              <a href="#services" class="footer-link">Our Services</a>
+              <a href="#home" class="footer-link">Home</a>
+              <a href="#Treatments" class="footer-link">Our Services</a>
               <a href="#testimonials" class="footer-link">Testimonials</a>
               <a href="#faq" class="footer-link">FAQ</a>
-              <a href="#" class="footer-link">Before & After</a>
+              <a href="#results" class="footer-link">Before & After</a>
               <a href="#" class="footer-link">Blog</a>
               <a href="#" class="footer-link">Contact Us</a>
             </nav>
@@ -1538,14 +1624,14 @@
           <div class="footer-col fade-up-footer">
             <h3 class="footer-heading text-xl">Find Us</h3>
             <div class="map-container mt-4">
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.5053185057204!2d73.77303069999999!3d18.5963279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9cd63c50743%3A0xd03f2130682c3e9d!2sSkin%20and%20Scalps%20Clinic!5e0!3m2!1sen!2sin!4v1754401863766!5m2!1sen!2sin" width=full height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.5053185057204!2d73.77303069999999!3d18.5963279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9cd63c50743%3A0xd03f2130682c3e9d!2sSkin%20and%20Scalps%20Clinic!5e0!3m2!1sen!2sin!4v1754401863766!5m2!1sen!2sin" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
 
         <!-- Copyright -->
         <div class="copyright text-center text-sm">
-          <p>&copy; 2023 Graftickle Hair Transplant Clinic. All rights reserved.</p>
+          <p>&copy; 2025 Graftikle Hair Transplant Clinic. All rights reserved.</p>
         </div>
       </div>
     </footer>
