--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="results.css" />
   <link rel="stylesheet" href="consultation.css" />
   <link rel="stylesheet" href="roadmap.css" />
+  
   <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -323,19 +324,19 @@
 
                 <!-- Floating Elements -->
                 <div
-                  class="absolute -top-4 -right-4 w-16 h-16 sm:w-20 sm:h-20 bg-gradient-to-r from-accent to-orange-500 rounded-full animate-float opacity-80"
+                  class="absolute -top-4 -right-4 w-16 h-16 sm:w-20 sm:h-20 bg-gradient-to-r from-accent to-orange-500 rounded-full animate-float opacity-80 floating pulsing"
                 ></div>
                 <div
-                  class="absolute -bottom-4 -left-4 w-12 h-12 sm:w-16 sm:h-16 bg-gradient-to-r from-primary to-secondary rounded-full animate-float opacity-80"
+                  class="absolute -bottom-4 -left-4 w-12 h-12 sm:w-16 sm:h-16 bg-gradient-to-r from-primary to-secondary rounded-full animate-float opacity-80 floating"
                   style="animation-delay: 1s"
                 ></div>
 
                 <!-- Decorative Elements -->
                 <div
-                  class="absolute top-1/2 -left-6 sm:-left-8 w-3 h-3 sm:w-4 sm:h-4 bg-accent rounded-full animate-pulse"
+                  class="absolute top-1/2 -left-6 sm:-left-8 w-3 h-3 sm:w-4 sm:h-4 bg-accent rounded-full animate-pulse floating"
                 ></div>
                 <div
-                  class="absolute bottom-1/4 -right-4 sm:-right-6 w-2 h-2 sm:w-3 sm:h-3 bg-primary rounded-full animate-pulse"
+                  class="absolute bottom-1/4 -right-4 sm:-right-6 w-2 h-2 sm:w-3 sm:h-3 bg-primary rounded-full animate-pulse floating"
                   style="animation-delay: 0.5s"
                 ></div>
               </div>
